testsuite/tests/partial-sigs/should_fail/T11976.stderr

T11976.hs:7:20: error:
    • Illegal polymorphic type: Lens w0 w1
      GHC doesn't yet support impredicative polymorphism
    • In an expression type signature: Lens _ _ _
      In the expression: undefined :: Lens _ _ _
      In an equation for ‘foo’: foo = undefined :: Lens _ _ _

T11976.hs:7:20: error:
    • Expecting one fewer arguments to ‘Lens w0 w1’
      Expected kind ‘k0 -> *’, but ‘Lens w0 w1’ has kind ‘*’
    • In the type ‘Lens _ _ _’
      In an expression type signature: Lens _ _ _
      In the expression: undefined :: Lens _ _ _
